# PythonPractice

./: .gitignore
ThePythonTutorial/: 3.1.2_strings.py  3.1.3_lists.py  3.2_fibonacci.py  4.2_for.py  4.6_function.py  4.7.1_DefaultArgumentValues.py  5.1.1_stack.py  5.1.2_queue.py  5.1.3_list_comprehensions.py
async_await/: README.md
asyncer/: README.md  pyproject.toml  test2.py  test7.py  test9.py
basic/: bit.py  copy_demo.py  for_else.py  list_assign.py  packing_unpacking.py  short_if.py  slice.py  sort.py  sys.path.py  type.py
big_class/: big_class.py  big_class_context.py  big_class_interfaces.py  main.py  pyproject.toml
countline/: countline.py
dbdemo/: dbdemo.py
fastapi/: .gitignore  README.md
graphvizdemo/: README.md  graphviz_1.py  graphviz_2.py  graphviz_3.py
iniParser/: app.conf  iniparser.py  iniparser_test.py  newapp.ini  test.ini  test2.ini
matplotlibdemo/: mat1.py
modulecalldemo/: main.py
re/: re.bracket.py  re.escape.py  re.match.py  re.pattern.match.py  re.pattern.search.py  re.sub.py  reblogheader.py  redemo.py  str2int.py  tokenizer.py
recursion/: Euclid.py  Factorial.py  TowersOfHanoi.py
regex/: README.md  re.escape.py  re.findall.py  re.pattern.fullmatch.py  re.scanf.py  re.split.py
renameFileDemo/: rename.py
str2int/: str2int.py
test/: test.py
theCraftdemo/: 1_E_5_strings.py  1_E_6_containers_dictionary.py  1_E_6_containers_iteration.py  1_E_6_containers_list.py  1_E_6_containers_set.py  1_E_6_containers_tuple.py  1_E_7_files.py  (+20 more)
uv_demos/hello-world/: README.md  main.py  pyproject.toml  requirements.txt
(+148 files in other folders)
