[project]
name = "hello-world"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "cowsay>=6.1",
    "httpx>=0.28.1",
    "requests>=2.32.3",
]

[[tool.uv.index]]
url = "http://127.0.0.1:9000/simple/"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
lint = [
    "ruff>=0.9.8",
]
